# TARANTULA

./: .gitignore  CMakeLists.txt  Config.h  Explicacion_Trapezoidal.txt  Leg.cpp  MainWindow.cpp  MotorController.h  SimpleSerial.h  SpiderWidget.cpp  SpiderWidget.h  SteadyWinMotor.cpp  SteadyWinMotor.h  Tarantula.cpp  Tarantula.h  WaveshareInterface.cpp  WaveshareInterface.h  montecarlo_extremidad  plot_body_validation.py  plot_chassis_workspace.py  plot_chassis_workspace_rotation.py  plot_chassis_workspace_translation.py  plot_drop_test.py  plot_ik_validation.py  plot_load_test.py  plot_repeatability.py  plot_telemetry.py  plot_workspace.py  plot_workspace_3d.py  plot_workspace_clean.py
include/: Config.h  GaitController.h  Leg.h  MainWindow.h  MotorController.h  SpiderWidget.h  Tarantula.h  Tests.h  WaveshareInterface.h
scratch/: calculate_workspace.py  check_max.py  cinematica_creep_gait.tex  test_collision.cpp  test_collision_swing.cpp  test_ik.cpp
src/: GaitController.cpp  Leg.cpp  MainWindow.cpp  MainWindow.ui  MotorController.cpp  SimpleSerial.cpp  SpiderWidget.cpp  Tarantula.cpp  Tests.cpp  WaveshareInterface.cpp  main.cpp
